<resources>
    <string name="app_name">SugarPop</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="no_internet_message">You need to have Mobile Data or wifi to access this. Press ok to Exit</string>
    <string name="no_interent_okbutton">ok</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="refresh">Refresh</string>
    <string name="no_interenet_connection">No Interenet Connection</string>
    <string name="number_of_servings">Number of servings</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="next">next</string>
    <string name="ingredient">Ingredient</string>
    <string name="spoon">spoon</string>
    <string name="retrofit_error">Something went wrong...Please try later!</string>
    <string name="ingredients">ingredients</string>
    <string name="step">step</string>
    <string name="step_name">Step Name</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="video_description">Video Description</string>
    <string name="reciepe_name">Reciepe Name</string>
    <string name="video">Video is not available</string>
    <string name="back">Please click BACK again to exit</string>
    <string name="video_increment">1000</string>
    <string name="widget_recipe_key">widget_recipe_key</string>
    <string name="play">play</string>
    <string name="pause">pause</string>

</resources>
