<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_24sp"
        android:padding="@dimen/dimen_4dp"
        android:textStyle="bold"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/tv_widget_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_4dp"
        android:text="@string/reciepe_name"
        android:textSize="@dimen/font_18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_widget_ingredientslist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/dimen_4dp"
        android:padding="@dimen/dimen_8dp"
        android:text="@string/ingredients"
        android:textSize="@dimen/font_14sp" />
</LinearLayout>