<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_color"
    android:padding="15dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="@color/textColor"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardCornerRadius="@dimen/dimen_4dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_recipeimage"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/dimen_5dp"
                android:background="@drawable/ic_launch_icon"
                android:contentDescription="@string/recipe_image"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.733" />

            <TextView
                android:id="@+id/tv_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/iv_recipeimage"
                android:text="@string/recipe_name"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_recipe_name"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/dimen_5dp"
                android:text="@string/number_of_servings"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/font_14sp" />
        </RelativeLayout>


    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>