<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp"
    android:padding="@dimen/dimen_15dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="@color/textColor"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardCornerRadius="@dimen/dimen_4dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/rl_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_ingredientimage"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/dimen_10dp"
                android:background="@drawable/ingredients"
                android:contentDescription="@string/recipe_image"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.733" />

            <TextView
                android:id="@+id/tv_ingredient_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dimen_26dp"
                android:layout_toEndOf="@+id/iv_ingredientimage"
                android:text="@string/ingredient"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_24sp" />

            <ImageView
                android:id="@+id/iv_arrowimage"
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dimen_26dp"
                android:layout_toEndOf="@+id/tv_ingredient_name"
                android:background="@drawable/right_arrow"
                android:contentDescription="@string/next"
                android:scaleType="fitXY"
                android:textAlignment="viewStart" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>